--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	
    <div id="bodyblur">
-     <!-- Wallpaper / Background --><img src="nisa.png" id="wallpaper"/>
+     <!-- Wallpaper / Background --><img src="nisaap.jpg" id="wallpaper"/>
    </div>
   
   <div class="kumpulanstiker">
@@ -126,10 +126,8 @@
                   imageUrl: '' + fotoakhir4.src,
                   });
                   
-                  katangetik = "<b>Terakhir, aku cuma mau bilang:</b><br><br><i>im very lucky to have you!</i> aku suka<br>semua tentang kamu, aku suka banget<br>denger suara kamu yang selalu bikin<br>aku tenang, pokoknya aku suka<br>semuanya tentang kamu.<br><br>Tetaplah menjadi tujuanku yaa, jangan<br>menjauh, jangan pergi, dan jangan<br>berpindah ke lain hati, aku sayang<br>kamu selaluuu <333333";
-                  katangetik2 = "<i>i love uuuu 💞🤍💝❣️</i>";
+                  katangetik = "<b>Aku cuma mau bilang:</b><br><br><i>im very lucky to have you!</i> aku suka<br>semua tentang kamu, aku suka banget<br>denger suara kamu yang selalu bikin<br>aku tenang, pokoknya aku suka<br>semuanya tentang kamu.<br><br>Tetaplah menjadi tujuanku yaa, jangan<br>menjauh dan jangan pergi";
                   
-                  pesanwhatsapp = "ilvyou too 💞🤍💝❣️";
                  setTimeout(kpemb,200);
             }
 </script>
