--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         showLoaderOnConfirm: true,
         preConfirm: async (pesan) => {
           // Kirim pesan ke bot Telegram di sini
-          await kirimPesanKeBot(pesan);
+          await jawab(pesan);
         }
       });
 
