--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   });
                   
                   katangetik = "<b>Aku cuma mau bilang:</b><br><br><i>Aku beruntung kenal kamu</i> aku suka<br>semua tentang kamu, aku suka banget<br>denger suara kamu yang selalu bikin<br>aku tenang, pokoknya aku suka<br>semuanya tentang kamu.<br><br>Tetaplah menjadi tujuanku yaa, jangan<br>menjauh dan jangan pergi";
-                  katangetik2 = "<div id='Tombol'><a onClick='tampilkanInput()'><b>💌 Balas</b></a></div>"
+                  katangetik2 = "<a onClick='tampilkanInput()'><b>💌 Balas</b></a>"
                  setTimeout(kpemb,200);
             }
 </script>
