--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
       await swal.fire('Kirim pesan ke Aku ya 😍');
       
       const chatId = '5597253935'; // ID obrolan atau pengguna yang ingin Anda kirimkan pesan
-      const pesanku; // Pesan yang ingin Anda kirim
 
       // Membuat payload untuk dikirim ke API Telegram
       const payload = JSON.stringify({
@@ -150,7 +149,7 @@
                   });
                   
                   katangetik = "<b>Aku cuma mau bilang:</b><br><br><i>Aku beruntung kenal kamu</i> aku suka<br>semua tentang kamu, aku suka banget<br>denger suara kamu yang selalu bikin<br>aku tenang, pokoknya aku suka<br>semuanya tentang kamu.<br><br>Tetaplah menjadi tujuanku yaa, jangan<br>menjauh dan jangan pergi";
-                  katangetik2 = "<a onClick='tampilkanInput()'><b>💌 Balas</b></a>"
+                  katangetik2 = "<a onClick='tampilkanInput()'><b>💌 Balas</b></a>";
                  setTimeout(kpemb,200);
             }
 </script>
