--- a/index.html
+++ b/index.html
@@ -77,28 +77,31 @@
       }
     }
 	
-    async function jawab(pesanku) {
-      await swal.fire('Kirim pesan ke Aku ya 😍');
-      
+      async function jawab(pesan) {
+      await Swal.fire('Kirim pesan ke Aku ya 😍');
+
       const chatId = '5597253935'; // ID obrolan atau pengguna yang ingin Anda kirimkan pesan
 
-      // Membuat payload untuk dikirim ke API Telegram
-      const payload = JSON.stringify({
+      const payload = {
         chat_id: chatId,
-        text: pesanku
-      });
-
-      // Konfigurasi opsi untuk permintaan HTTP
-      const options = {
-        hostname: 'api.telegram.org',
-        port: 443,
-        path: `/bot${token}/sendMessage`,
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Content-Length': payload.length
-        }
+        text: pesan
       };
+
+      try {
+        const response = await fetch(`https://api.telegram.org/bot${token}/sendMessage`, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(payload)
+        });
+
+        const data = await response.json();
+        console.log('Response:', data);
+      } catch (error) {
+        console.error('Error:', error);
+      }
+    }
 
       // Kirim permintaan ke API Telegram
       const response = await new Promise((resolve, reject) => {
