--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       if (pesan) {
         Swal.fire({
           title: 'Pesan Terkirim!',
-          text: `Pesan "${pesan}" telah berhasil dikirim.`,
+          text: `Pesan telah berhasil dikirim.`,
           icon: 'success'
         });
       }
