--- a/fiooo/index.html
+++ b/fiooo/index.html
@@ -17,7 +17,7 @@
      <div class="loading-message">Hai kamu!<br>Tunggu dulu ya..<br><br>Ga lama kok 🥳</div>
    </div>
 
-   <audio src="https://feeldreams.github.io/maukahkamu/angelbaby.mp3" id="linkmp3" class="sembunyi"></audio>
+   <audio src="cinta.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <section class="first">
        <div class="wp"><img src="1.jpg"/></div>
