--- a/arin/index.html
+++ b/arin/index.html
@@ -6,7 +6,7 @@
 
 <head>
 <title>Arin</title>
-<meta name="description" content="Fioo Ada Pesan NIh...">
+<meta name="description" content="Arin Sayang">
 <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
