--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"><script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script><script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
   <link href="https://Blog.feeldream.repl.co/style.css" rel="stylesheet" type="text/css" />
 <head>
-<title>Arin</title>
+<title>Waheeda</title>
 </head>
 <!-- Edit Wallpaper 
 di background-image URL --><style>
@@ -69,7 +69,7 @@ p{font-size:18px;font-weight:400;line-height:1.4em;/*text-shadow: 0px 2px 2px rg
    <!-- Ganti Audio di sini --><audio id="linkmp3">https://feeldreams.github.io/sepatu.mp3</audio>
    
    <div id="bodyblur">
-     <!-- Wallpaper --><img src="https://i.ibb.co/GPtmmyy/Whats-App-Image-2024-04-21-at-16-59-47-594d2c69.jpg" id="wallpaper"/>
+     <!-- Wallpaper --><img src="https://s.widget-club.com/images/YyiR86zpwIMIfrCZoSs4ulVD9RF3/8acc88d2d0b23ea4b6d11dd7e0909a9a/aeccbbefede437ab7934d9a61a7da878.jpg?q=70&w=500" id="wallpaper"/>
    </div>
 
    <div id='Content'>
